# ChangeLog for dev-util/xfce4-dev-tools
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/xfce4-dev-tools/ChangeLog,v 1.23 2009/10/24 19:58:06 nixnut Exp $

  24 Oct 2009; nixnut <nixnut@gentoo.org> xfce4-dev-tools-4.7.0.ebuild:
  ppc stable #289179

  05 Oct 2009; Raúl Porcel <armin76@gentoo.org>
  xfce4-dev-tools-4.7.0.ebuild:
  alpha/arm/ia64 stable wrt #287041

  03 Oct 2009; Tiago Cunha <tcunha@gentoo.org> xfce4-dev-tools-4.7.0.ebuild:
  stable sparc, bug 287041

  03 Oct 2009; Markus Meier <maekke@gentoo.org>
  xfce4-dev-tools-4.7.0.ebuild:
  amd64/x86 stable, bug #287041

*xfce4-dev-tools-4.7.2 (21 Sep 2009)

  21 Sep 2009; Jeremy Olexa <darkside@gentoo.org>
  +xfce4-dev-tools-4.7.2.ebuild:
  Version bump, supports new macros :
  http://releases.xfce.org/feeds/project/xfce4-dev-tools

*xfce4-dev-tools-4.7.0 (19 Aug 2009)

  19 Aug 2009; Jeremy Olexa <darkside@gentoo.org>
  +xfce4-dev-tools-4.7.0.ebuild:
  Version bump, new features:
  http://releases.xfce.org/feeds/project/xfce4-dev-tools

  27 Jul 2009; nixnut <nixnut@gentoo.org> xfce4-dev-tools-4.6.0.ebuild:
  ppc stable #265587

  30 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  xfce4-dev-tools-4.6.0.ebuild:
  Stable on alpha, bug #265587

  28 Jun 2009; Brent Baude <ranger@gentoo.org> xfce4-dev-tools-4.6.0.ebuild:
  Marking xfce4-dev-tools-4.6.0 ppc64 stable for bug 265587

  22 Jun 2009; Raúl Porcel <armin76@gentoo.org>
  xfce4-dev-tools-4.6.0.ebuild:
  arm/ia64 stable wrt #265587

  15 Jun 2009; Jeroen Roovers <jer@gentoo.org> xfce4-dev-tools-4.6.0.ebuild:
  Stable for HPPA (bug #265587).

  13 Jun 2009; Tiago Cunha <tcunha@gentoo.org> xfce4-dev-tools-4.6.0.ebuild:
  stable sparc, bug 265587

  10 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  xfce4-dev-tools-4.6.0.ebuild:
  stable x86, bug 265587

  09 Jun 2009; Jeremy Olexa <darkside@gentoo.org>
  xfce4-dev-tools-4.6.0.ebuild:
  amd64 stable, bug 265587
