@@ -1,8 +1,8 @@
 DIST xfce4-dev-tools-4.6.0.tar.bz2 61934 RMD160 ff2a5e9c7bd637efdc76b126f8854b934d4862ba SHA1 a5a5cbc9e5f84f4939e53e3327c51f4b749c38a2 SHA256 4763a891ac7030c109c7ca03b1b0b834859c2aac4f8e359774ee01a6875694ac
 DIST xfce4-dev-tools-4.7.0.tar.bz2 66344 RMD160 d2e8458ff693a2b8fa927af8bd08628b9d23cd30 SHA1 1b334a56a0c0553cf0a9e3c340657386f136f053 SHA256 0eaac91f136edf0624ebaf75ab8edd5b5314f91c78423d3461a0c2f0709732bd
 DIST xfce4-dev-tools-4.7.2.tar.bz2 68276 RMD160 1f4657799b52e9783a0ede410c05e6b6f033ade8 SHA1 6b8c0cc24fd126a7c73b987a96df890b8241be2a SHA256 06a696bd3088826d64d06ee57002623a2667f14947bd9fe32d946d98867a13a7
-EBUILD xfce4-dev-tools-4.6.0.ebuild 524 RMD160 ec87d7d58e97dfd3edd9761fc4cd3fb50587aa2c SHA1 af449eac2f56236a45d1cd36142350303baa8c3a SHA256 eabb12240c4580197804ff90fd6b37ef762466835e7b41fdba09ec40feb02b24
+EBUILD xfce4-dev-tools-4.6.0.ebuild 653 RMD160 a7b696c2b287ec2083867fc9cd3be2983ecf83fa SHA1 3f73b6074bc8ee707fc911657fa0c86cb3ef0797 SHA256 e2cfe691fbb3e9151f36303aa8e2b29e01eb79343fa70148b337d05603fb80bf
 EBUILD xfce4-dev-tools-4.7.0.ebuild 634 RMD160 45fb47e95fa04c2dc968c761f785a76d35a2f71c SHA1 80673bf94acb2d25c9eb8f28ca7162304e4b238f SHA256 5c2b5ff1b919b3745a1a84a7d91bfd1e73f4cffb4d1231286fd7cd7116a98e13
 EBUILD xfce4-dev-tools-4.7.2.ebuild 634 RMD160 5af9c95e4a897e492c178fe1522e596576daa956 SHA1 378ed30336152840d18ee3bc1df2ee2268137924 SHA256 726c693d4c06ef9a67b78aba72b27330a10322c783bac7e082efd32e46e5a523
-MISC ChangeLog 4729 RMD160 dbcd3f250132b9141e485599b271b861230fb012 SHA1 f417567029aae364fdff87df6cc9e45d6ffc764b SHA256 b6ce29899a74f543f1fc97eaddd37367d56425da8b3693abdf793c565f412c9f
+MISC ChangeLog 4852 RMD160 aba99af6fdcab23583e49802b6b6a399abe2c0d6 SHA1 1708a8a42abf62d8ef32f0f77491686894e5e2a2 SHA256 138ad971fc937c7612e89a35693ccd86d8f88a681a4a0e798a0dac17b08afc9f
 MISC metadata.xml 159 RMD160 43722935bd7b4db7fe8db681054f2e53c4a5f7ce SHA1 15958ad72e234ba572c9534533c21532eb6bc0fd SHA256 900ea49b6703fce452e205b85226bf1f994725963e5840da501182e7487d0e63
