@@ -1,14 +1,18 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/xfce4-dev-tools/xfce4-dev-tools-4.6.0.ebuild,v 1.9 2009/07/27 17:37:23 nixnut Exp $
-
-inherit xfce4
-
-xfce4_core
+# $Header: /var/cvsroot/gentoo-x86/dev-util/xfce4-dev-tools/xfce4-dev-tools-4.6.0.ebuild,v 1.10 2009/11/30 04:08:24 abcd Exp $
 
 DESCRIPTION="m4macros for autotools eclass and subversion builds"
 HOMEPAGE="http://foo-projects.org/~benny/projects/xfce4-dev-tools"
+SRC_URI="mirror://xfce/xfce-${PV}/src/${P}.tar.bz2"
+
+LICENSE="GPL-2"
+SLOT="0"
 KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~x64-solaris"
 IUSE=""
 
-DOCS="AUTHORS ChangeLog HACKING NEWS README"
+src_install() {
+	emake DESTDIR="${D}" install || die "emake install failed"
+
+	dodoc AUTHORS ChangeLog HACKING NEWS README
+}
