@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/xfce4-dev-tools
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/xfce4-dev-tools/ChangeLog,v 1.23 2009/10/24 19:58:06 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/xfce4-dev-tools/ChangeLog,v 1.24 2009/11/30 04:08:24 abcd Exp $
+
+  30 Nov 2009; Jonathan Callen <abcd@gentoo.org>
+  xfce4-dev-tools-4.6.0.ebuild:
+  Drop usage of xfce44.eclass (deprecated)
 
   24 Oct 2009; nixnut <nixnut@gentoo.org> xfce4-dev-tools-4.7.0.ebuild:
   ppc stable #289179
